5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1636_2731.log
== SUBMITION (2019-05-17 08:33:44) 
-- CODE:
a=float(input("quoeficiente a :"))
b=float(input("quoeficiente b :"))
r=float(input("raio :"))
if (y>0):
	print("Superiores")
else :
	print("Inferiores")
-- EXECUTION TIME:
0.143898
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2731/main.py", line 4, in <module>
    if (y>0):
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:33:47) 
-- CODE:
a=float(input("quoeficiente a :"))
b=float(input("quoeficiente b :"))
r=float(input("raio :"))
if (y>0):
	print("Superiores")
else :
	print("Inferiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (y>0):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 08:34:07) 
-- CODE:
a=float(input("quoeficiente a :"))
b=float(input("quoeficiente b :"))
r=float(input("raio :"))
if (b>0):
	print("Superiores")
else :
	print("Inferiores")
-- EXECUTION TIME:
0.159961
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
